feat: Expose the matrix APIs

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "./interpolation": "./src/interpolation/index.mjs",
     "./interpolation/bilinear": "./src/interpolation/3d/bilinear.mjs",
     "./linalg": "./src/linalg/index.mjs",
+    "./linalg/backward": "./src/linalg/backward.mjs",
     "./linalg/det": "./src/linalg/det.mjs",
     "./linalg/inverse": "./src/linalg/inverse.mjs",
     "./linalg/lu": "./src/linalg/lu.mjs",
+    "./linalg/matrix": "./src/matrix/utils.mjs",
     "./linalg/qr": "./src/linalg/qr.mjs",
     "./linalg/rank": "./src/linalg/rank.mjs",
     "./linalg/svd": "./src/linalg/svd.mjs",
